--- a/uses/marketers/index.html
+++ b/uses/marketers/index.html
@@ -12,13 +12,12 @@
 <!-- End Google Tag Manager for WordPress by DuracellTomi -->
 <!-- This site is optimized with the Yoast WordPress SEO plugin v1.7.4 - https://yoast.com/wordpress/plugins/seo/ -->
 <meta name="description" content="See how marketers can use Qzzr - the simplest, most beautiful quizzing tool out there - to drive more social traffic."/>
-<link rel="canonical" href="." />
-<link rel="next" href="page/2" />
+<link rel="canonical" href="https://www.qzzr.com/uses/marketers" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr" />
 <meta property="og:description" content="See how marketers can use Qzzr - the simplest, most beautiful quizzing tool out there - to drive more social traffic." />
-<meta property="og:url" content="https://www.qzzr.com/blog/uses/marketers/" />
+<meta property="og:url" content="https://www.qzzr.com/uses/marketers" />
 <meta property="og:site_name" content="Qzzr" />
 <!-- / Yoast WordPress SEO plugin. -->
 
@@ -72,9 +71,9 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-572"><a href="javascript:;">Uses</a>
 <ul class="sub-menu">
   <li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
-  <li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="/publishers">Publishers</a></li>
-  <li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-474"><a href=".">Marketers</a></li>
-  <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="/agencies">Agencies</a></li>
+  <li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="/uses/publishers">Publishers</a></li>
+  <li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-474"><a href="/uses/marketers">Marketers</a></li>
+  <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="/uses/agencies">Agencies</a></li>
   <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
   <li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="/uses/drive-social-traffic">Drive social traffic</a></li>
   <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-477"><a href="/uses/generate-qualified-leads">Generate qualified leads</a></li>
@@ -242,14 +241,14 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 
 
 <div class="footer_top"><div id="nav_menu-2" class="widget widget_nav_menu box"><h3>Overview</h3><div class="menu-footer-overview-container"><ul id="menu-footer-overview" class="menu"><li id="menu-item-1250" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1250"><a href="/tour">Tour</a></li>
-<li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="/publishers">Uses</a></li>
+<li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="/uses/publishers">Uses</a></li>
 <li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1252"><a href="/pricing">Pricing</a></li>
 <li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253"><a href="/stories/publishers">Stories</a></li>
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="/our-team">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="/blog/">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="/publishers">Publishers</a></li>
-<li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-832"><a href=".">Marketers</a></li>
-<li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="/agencies">Agencies</a></li>
+<li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-832"><a href="/uses/marketers">Marketers</a></li>
+<li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="/uses/agencies">Agencies</a></li>
 </ul></div></div><div id="nav_menu-4" class="widget widget_nav_menu box"><h3>Qzzr to</h3><div class="menu-qzzr-to-container"><ul id="menu-qzzr-to" class="menu"><li id="menu-item-828" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-828"><a href="/uses/drive-social-traffic">Drive social traffic</a></li>
 <li id="menu-item-830" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-830"><a href="/uses/generate-qualified-leads">Generate qualified leads</a></li>
 <li id="menu-item-829" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-829"><a href="/uses/present-targeted-offers">Present targeted offers</a></li>
