--- a/uses/present-targeted-offers/index.html
+++ b/uses/present-targeted-offers/index.html
@@ -75,9 +75,9 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-572"><a href="javascript:;">Uses</a>
 <ul class="sub-menu">
   <li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
-  <li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="/publishers">Publishers</a></li>
-  <li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-474"><a href="/marketers">Marketers</a></li>
-  <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="/agencies">Agencies</a></li>
+  <li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="/uses/publishers">Publishers</a></li>
+  <li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-474"><a href="/uses/marketers">Marketers</a></li>
+  <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="/uses/agencies">Agencies</a></li>
   <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
   <li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="/uses/drive-social-traffic">Drive social traffic</a></li>
   <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-477"><a href="/uses/generate-qualified-leads">Generate qualified leads</a></li>
