--- a/uses/publishers/index.html
+++ b/uses/publishers/index.html
@@ -295,8 +295,8 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="/our-team">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="/blog/">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-831"><a href="/uses/publishers">Publishers</a></li>
-<li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="/marketers">Marketers</a></li>
-<li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="/agencies">Agencies</a></li>
+<li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="/uses/marketers">Marketers</a></li>
+<li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="/uses/agencies">Agencies</a></li>
 </ul></div></div><div id="nav_menu-4" class="widget widget_nav_menu box"><h3>Qzzr to</h3><div class="menu-qzzr-to-container"><ul id="menu-qzzr-to" class="menu"><li id="menu-item-828" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-828"><a href="/uses/drive-social-traffic">Drive social traffic</a></li>
 <li id="menu-item-830" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-830"><a href="/uses/generate-qualified-leads">Generate qualified leads</a></li>
 <li id="menu-item-829" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-829"><a href="/uses/present-targeted-offers">Present targeted offers</a></li>
