--- a/stories/marketers/index.html
+++ b/stories/marketers/index.html
@@ -86,7 +86,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 </ul>
 </li>
 <li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="/pricing">Pricing</a></li>
-<li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-431 current_page_item current-menu-item"><a href="/publishers">Stories</a></li>
+<li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-431 current_page_item current-menu-item"><a href="/uses/publishers">Stories</a></li>
 <li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="javascript:;">About</a>
 <ul class="sub-menu">
 	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="/our-team">Our team</a></li>
@@ -528,7 +528,7 @@ Other quizzes include:
 <div class="footer_top"><div id="nav_menu-2" class="widget widget_nav_menu box"><h3>Overview</h3><div class="menu-footer-overview-container"><ul id="menu-footer-overview" class="menu"><li id="menu-item-1250" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1250"><a href="/tour">Tour</a></li>
 <li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="/uses/publishers">Uses</a></li>
 <li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1252"><a href="/pricing">Pricing</a></li>
-<li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253 current_page_item current-menu-item"><a href="/publishers">Stories</a></li>
+<li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253 current_page_item current-menu-item"><a href="/uses/publishers">Stories</a></li>
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="/our-team">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="/blog/">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="/uses/publishers">Publishers</a></li>
