--- a/uses/drive-social-traffic/index.html
+++ b/uses/drive-social-traffic/index.html
@@ -261,12 +261,12 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 
 
 <div class="footer_top"><div id="nav_menu-2" class="widget widget_nav_menu box"><h3>Overview</h3><div class="menu-footer-overview-container"><ul id="menu-footer-overview" class="menu"><li id="menu-item-1250" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1250"><a href="/tour">Tour</a></li>
-<li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="/publishers">Uses</a></li>
+<li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="/uses/publishers">Uses</a></li>
 <li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1252"><a href="/pricing">Pricing</a></li>
 <li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253"><a href="/stories/publishers">Stories</a></li>
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="/our-team">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="/blog/">Blog</a></li>
-</ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="/publishers">Publishers</a></li>
+</ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="/uses/publishers">Publishers</a></li>
 <li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="/uses/marketers">Marketers</a></li>
 <li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="/uses/agencies">Agencies</a></li>
 </ul></div></div><div id="nav_menu-4" class="widget widget_nav_menu box"><h3>Qzzr to</h3><div class="menu-qzzr-to-container"><ul id="menu-qzzr-to" class="menu"><li id="menu-item-828" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-828"><a href="/uses/drive-social-traffic">Drive social traffic</a></li>
