fix canonical url

--- a/uses/publishers/index.html
+++ b/uses/publishers/index.html
@@ -12,7 +12,7 @@
 <!-- End Google Tag Manager for WordPress by DuracellTomi -->
 <!-- This site is optimized with the Yoast WordPress SEO plugin v1.7.4 - https://yoast.com/wordpress/plugins/seo/ -->
 <meta name="description" content="See how publishers can use Qzzr - the simplest, most beautiful quizzing tool out there - to drive more social traffic."/>
-<link rel="canonical" href="/uses/publishers" />
+<link rel="canonical" href="https://www.qzzr.com/uses/publishers" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr" />
