--- a/our-team/index.html
+++ b/our-team/index.html
@@ -314,7 +314,7 @@ By creating the world’s simplest, most beautiful and mobile-friendly quiz crea
 <ul>
 <li><a href="/terms-of-service">Terms of service</a></li>
 <li><a href="/privacy-policy">Privacy policy</a></li>
-<li><a href="/content-guidelines">Content guidelines</a></li>etude
+<li><a href="/content-guidelines">Content guidelines</a></li>
 </ul>
 </div>
 		</div></div></div><div class="social-media"><div class="wrap"><a class="icon icon-ss-social-facebook" href="https://www.facebook.com/pages/QZZR/200008303516674 " target="_blank" ></a><a class="icon icon-ss-social-twitter" href="https://twitter.com/Qzzr_" target="_blank" ></a><a class="icon icon-ss-social-linkedin" href="https://www.linkedin.com/company/qzzr" target="_blank" ></a></div></div><!-- end .social-media --></div></div></div><script type="text/javascript">
