iframe was not working

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -200,8 +200,7 @@
                                             <div class="contact-form-container">
                                                 <div class="wpcf7" id="wpcf7-f1032-p558-o1" lang="en-US" dir="ltr">
                                                     <div class="screen-reader-response"></div>
-                                                      <iframe src='//go.qzzr.com/contact-us/' scrolling="no" frameborder='0'width='100%' height='300px'></iframe>
-
+                                                      <iframe src='//go.qzzr.com/contact-us/' scrolling='no' frameborder='0'width='100%' height='300px'></iframe>
                                                     <!--
                                                     <form name="" action="#wpcf7-f1032-p558-o1" method="post" class="wpcf7-form" novalidate="novalidate">
                                                         <div style="display: none;">
