added some css to accommidate some changes to the contact form

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -105,6 +105,27 @@
         "pagePostAuthor": "admin"
     });
     </script>
+
+    <style type="text/css">
+       .col-4 {
+                width: 50%;
+                margin: 0;
+                padding: 0;
+            }
+
+        .leform {
+            min-width: 390px;
+        }
+        @media only screen and (max-width: 888px) and (min-width: 300px) {
+            .col-4 {
+                width: 100%;
+            }
+
+            .leform {
+                min-width: 350px;
+            }
+        }
+    </style>
 </head>
 
 <body class="page page-id-558 page-template-default header-image content-sidebar">
@@ -183,7 +204,7 @@
                                             <h4 class="h1 h accent-color mbn mtn">Get in touch</h4>
                                             <h3 class="opacity-5 text-center">We&#8217;d love to hear from you</h3>
                                         </div>
-                                        <div class="col-4 col-offset-1 col-wxl-6 col-wxl-offset-0 col-wm-12">
+                                        <div class="col-4 col-offset-1 col-wxl-offset-0 col-wm-12">
                                             <div class="box box-contact">
                                                 <div class="box-body">
                                                     <strong class="b">Phone</strong>
@@ -196,11 +217,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-4 col-offset-2 col-wxl-6 col-wxl-offset-0 col-wm-12">
+                                        <div class="col-4 col-offset-2 col-wxl-offset-0 col-wm-12 leform">
                                             <div class="contact-form-container">
                                                 <div class="wpcf7" id="wpcf7-f1032-p558-o1" lang="en-US" dir="ltr">
                                                     <div class="screen-reader-response"></div>
-                                                      <iframe src='//go.qzzr.com/contact-us/' scrolling='no' frameborder='0'width='100%' height='300px'></iframe>
+                                                      <iframe src='//go.qzzr.com/contact-us/' scrolling='no' frameborder='0'width='100%' min-width='350px' height='360px'></iframe>
                                                     <!--
                                                     <form name="" action="#wpcf7-f1032-p558-o1" method="post" class="wpcf7-form" novalidate="novalidate">
                                                         <div style="display: none;">
