--- a/pricing/index.html
+++ b/pricing/index.html
@@ -138,7 +138,7 @@
                             <li id="menu-item-669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-669"><a href="/contact-us">Contact</a></li>
                         </ul>
                     </li>
-                    <li id="menu-item-434" class="last-menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="//blog.boombox.com/">Blog</a></li>
+                    <li id="menu-item-434" class="last-menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="http://blog.boombox.com/">Blog</a></li>
                 </ul>
                 <div class="nav-bar-actions">
                     <div class="nav-bar-actions">
