Removed the Pro Unlimited plan as per Owen's request

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -243,8 +243,8 @@
                                         </ul>
                                         <footer class="box-footer">
                                             <a class="button button-outline button-primary button-large h6 b" href="https://app.qzzr.com/account/signup">
-          Sign up
-        </a>
+                                              Sign up
+                                            </a>
                                         </footer>
                                     </div>
                                 </div>
@@ -268,12 +268,12 @@
                                         </ul>
                                         <footer class="box-footer">
                                             <a href="https://app.qzzr.com/account/signup_pro/93" class="button button-primary button-outline button-large h6 b">
-          Sign up
-        </a>
+                                              Sign up
+                                            </a>
                                         </footer>
                                     </div>
                                 </div>
-                                <!-- Pro unlimited -->
+                                <!-- Pro unlimited
                                 <div class="flex pr2 pl2 flex-grow-1">
                                     <div class="box box-pricing box-pricing-primary">
                                         <header class="box-header">
@@ -288,12 +288,12 @@
                                         </ul>
                                         <footer class="box-footer">
                                             <a href="https://app.qzzr.com/account/signup_pro/84" class="button button-pop button-white button-large h6 b">
-          Sign up
-        </a>
+                                              Sign up
+                                            </a>
                                         </footer>
                                     </div>
                                 </div>
-                                <!-- Enterprise -->
+                                <!-- Enterprise
                                 <div class="flex pr2 pl2 flex-grow-1">
                                     <div class="box box-pricing">
                                         <header class="box-header">
@@ -316,8 +316,37 @@
                                         </ul>
                                         <footer class="box-footer">
                                             <a class="button button-outline button-primary button-large h6 b" href="http://go.qzzr.com/enterprise-request/">
-          Request info
-        </a>
+                                              Request info
+                                            </a>
+                                        </footer>
+                                    </div>
+                                </div>
+                                -->
+
+                                <div class="flex pr2 pl2 flex-grow-1">
+                                    <div class="box box-pricing box-pricing-primary">
+                                        <header class="box-header">
+                                            Enterprise
+                                        </header>
+                                        <div class="box-subheader">
+                                            Custom plans
+                                        </div>
+                                        <ul class="box-body">
+                                            <li>White Label </li>
+                                            <li>Qzzr + Pollcaster </li>
+                                            <li>Multiple contributors </li>
+                                            <li>Multiple brands</li>
+                                            <li>Ad refresh</li>
+                                            <li>Gate results with lead form</li>
+                                            <li>Campaign management</li>
+                                            <li>Quiz &amp; poll creation</li>
+                                            <li>Kickstart training</li>
+                                            <li>VIP support</li>
+                                        </ul>
+                                        <footer class="box-footer">
+                                            <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button-large h6 b">
+                                              Request info
+                                            </a>
                                         </footer>
                                     </div>
                                 </div>
