updated wording on the pricing page

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -332,8 +332,8 @@
                                             Custom plans
                                         </div>
                                         <ul class="box-body">
-                                            <li>All the goodness of Qzzr</li>
-                                            <li>25,000-Unlimited engagements/month</li>
+                                            <li><strong class="b">All the goodness of Qzzr</strong></li>
+                                            <li>25,000-Unlimited engagements/month <span class="tooltip" data-tooltip="An engagement is a user starting a quiz, or voting on a poll."><i class="icon icon-ss-info"></i></span></li>
                                             <li>White label</li>
                                             <li>Unlimited interactive polls</li>
                                             <li>Unlimited interactive lists (coming soon)</li>
