Updated the press page.

--- a/press/index.html
+++ b/press/index.html
@@ -179,7 +179,8 @@
                             <h2 class="h1 h accent-color">Qzzr buzz and news</h2>
                             <h2 class="h2 h mbn mtn">2015</h2>
                             <ul>
-                                <li><strong>SEMrush</strong><a href=" http://www.semrush.com/blog/yes-interactive-content-can-even-humanize-your-stuffy-brand/" target="_blank">Yes, Interactive Content Can Even Humanize Your Stuffy Brand</a></li>
+                                <li><strong>Penguin Strategies</strong><a href="http://www.penguinstrategies.com/blog/pop-quiz-content-marketing-quizzes-what-are-they-good-for" target="_blank">Pop Quiz! Content Marketing Quizzes, What Are They Good For?</a></li>
+                                <li><strong>SEMrush</strong><a href="http://www.semrush.com/blog/yes-interactive-content-can-even-humanize-your-stuffy-brand/" target="_blank">Yes, Interactive Content Can Even Humanize Your Stuffy Brand</a></li>
                                 <li><strong>Entrepreneur</strong><a href="http://www.entrepreneur.com/article/247234" target="_blank">Add These 12 Content Marketing Tools to Your Startup&#8217;s Arsenal</a></li>
                                 <li><strong>Uberflip</strong><a href="http://hub.uberflip.com/h/i/95454123-how-one-quiz-generated-a-million-dollars" target="_blank">How One Quiz Generated a Million Dollars</a></li>
                                 <li><strong>NinjaOutreach</strong><a href="http://ninjaoutreach.com/best-content-marketing-tools/" target="_blank">The Big List of 200+ Content Marketing Tools</a></li>
