Added article to Press page.

--- a/press/index.html
+++ b/press/index.html
@@ -179,6 +179,7 @@
                             <h2 class="h1 h accent-color">Qzzr buzz and news</h2>
                             <h2 class="h2 h mbn mtn">2015</h2>
                             <ul>
+                                <li><strong>The Guardian</strong><a href="http://www.theguardian.com/media-network/2015/sep/24/emojis-social-media-week-london-2015" target="_blank">Emojis and quizzes led the way at Social Media Week 2015</a></li>
                                 <li><strong>Penguin Strategies</strong><a href="http://www.penguinstrategies.com/blog/pop-quiz-content-marketing-quizzes-what-are-they-good-for" target="_blank">Pop Quiz! Content Marketing Quizzes, What Are They Good For?</a></li>
                                 <li><strong>SEMrush</strong><a href="http://www.semrush.com/blog/yes-interactive-content-can-even-humanize-your-stuffy-brand/" target="_blank">Yes, Interactive Content Can Even Humanize Your Stuffy Brand</a></li>
                                 <li><strong>Entrepreneur</strong><a href="http://www.entrepreneur.com/article/247234" target="_blank">Add These 12 Content Marketing Tools to Your Startup&#8217;s Arsenal</a></li>
