--- a/pricing/index.html
+++ b/pricing/index.html
@@ -148,13 +148,13 @@
                                 <div class="textwidget">
                                     <div class="nav-bar-actions ">
                                         <nav class="nav-bar-action">
-                                            <a href="https://app.qzzr.com/account/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+                                            <a href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
                                                 <i class="icon icon-ss-compose"></i>
                                                 <span class="inline-block">
                                                     <span class="button-label">Create<span class=" wl-none"> a quiz</span></span>
                                                 </span>
                                             </a>
-                                            <a class="button button-white button-outline" href="https://app.qzzr.com/account/signin">
+                                            <a class="button button-white button-outline" href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI">
                                                 Log in
                                             </a>
                                         </nav>
@@ -243,7 +243,7 @@
                                             <li>Full analytics</li>
                                         </ul>
                                         <footer class="box-footer">
-                                            <a class="button button-outline button-primary button-large h6 b" href="https://app.qzzr.com/account/signup">
+                                            <a class="button button-outline button-primary button-large h6 b" href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI">
                                               Sign up
                                             </a>
                                         </footer>
@@ -268,7 +268,7 @@
                                             <li>Export data for deeper insights</li>
                                         </ul>
                                         <footer class="box-footer">
-                                            <a href="https://app.qzzr.com/account/signup_pro/93" class="button button-primary button-outline button-large h6 b">
+                                            <a href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI_pro/93" class="button button-primary button-outline button-large h6 b">
                                               Sign up
                                             </a>
                                         </footer>
@@ -288,7 +288,7 @@
                                             <li>Unlimited engagements <span class="tooltip" data-tooltip="An engagement is a user starting a quiz, or voting on a poll."><i class="icon icon-ss-info"></i></span></li>
                                         </ul>
                                         <footer class="box-footer">
-                                            <a href="https://app.qzzr.com/account/signup_pro/84" class="button button-pop button-white button-large h6 b">
+                                            <a href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI_pro/84" class="button button-pop button-white button-large h6 b">
                                               Sign up
                                             </a>
                                         </footer>
