Updated signup and create links

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -148,13 +148,13 @@
                                 <div class="textwidget">
                                     <div class="nav-bar-actions ">
                                         <nav class="nav-bar-action">
-                                            <a href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+                                            <a href="/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
                                                 <i class="icon icon-ss-compose"></i>
                                                 <span class="inline-block">
                                                     <span class="button-label">Create<span class=" wl-none"> a quiz</span></span>
                                                 </span>
                                             </a>
-                                            <a class="button button-white button-outline" href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI">
+                                            <a class="button button-white button-outline" href="/login">
                                                 Log in
                                             </a>
                                         </nav>
@@ -243,7 +243,7 @@
                                             <li>Full analytics</li>
                                         </ul>
                                         <footer class="box-footer">
-                                            <a class="button button-outline button-primary button-large h6 b" href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI">
+                                            <a class="button button-outline button-primary button-large h6 b" href="/signup">
                                               Sign up
                                             </a>
                                         </footer>
@@ -268,7 +268,7 @@
                                             <li>Export data for deeper insights</li>
                                         </ul>
                                         <footer class="box-footer">
-                                            <a href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI_pro/93" class="button button-primary button-outline button-large h6 b">
+                                            <a href="/signup/fi9vYXV0aC9jbGllbnRzL3F6enI/plan/fi9wbGFucy85Mw" class="button button-primary button-outline button-large h6 b">
                                               Sign up
                                             </a>
                                         </footer>
