--- a/uses/publishers/index.html
+++ b/uses/publishers/index.html
@@ -133,13 +133,13 @@
                                 <div class="textwidget">
                                     <div class="nav-bar-actions ">
                                         <nav class="nav-bar-action">
-                                            <a href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+                                            <a href="/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
                                                 <i class="icon icon-ss-compose"></i>
                                                 <span class="inline-block">
           <span class="button-label">Create<span class=" wl-none"> a quiz</span></span>
                                                 </span>
                                             </a>
-                                            <a class="button button-white button-outline" href="https://auth.movementventures.com/login/fi9vYXV0aC9jbGllbnRzL3F6enI">
+                                            <a class="button button-white button-outline" href="/login">
         Log in
       </a>
                                         </nav>
