Removed yearly pro pricing. Updated remaining plan decriptions.

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -105,6 +105,10 @@
         "pagePostAuthor": "admin"
     });
     </script>
+
+
+    <!-- Optimizely -->
+    <script src="//cdn.optimizely.com/js/3604030016.js"></script>
 </head>
 
 <body class="page page-id-6 page-template page-template-price page-template-price-php header-image full-width-content">
@@ -234,13 +238,12 @@
                                         </div>
                                         <ul class="box-body">
                                             <li>Unlimited quizzes</li>
-                                            <li>Unlimited engagements <span class="tooltip" data-tooltip="An engagement is a user starting a quiz, or voting on a poll."><i class="icon icon-ss-info"></i></span> </li>
-                                            <li>Includes Qzzr Branding</li>
                                             <li>Unlimited shares</li>
                                             <li>Multimedia content</li>
                                             <li>Embed anywhere</li>
                                             <li>Custom themes and colors</li>
                                             <li>Full analytics</li>
+                                            <li>Includes Qzzr branding</li>
                                         </ul>
                                         <footer class="box-footer">
                                             <a class="button button-outline button-primary button-large h6 b" href="/signup">
@@ -249,7 +252,7 @@
                                         </footer>
                                     </div>
                                 </div>
-                                <!-- Pro -->
+                                <!-- Pro 
                                 <div class="flex pr2 pl2 flex-grow-1">
                                     <div class="box box-pricing">
                                         <header class="box-header">
@@ -274,6 +277,8 @@
                                         </footer>
                                     </div>
                                 </div>
+                                -->
+
                                 <!-- Pro unlimited
                                 <div class="flex pr2 pl2 flex-grow-1">
                                     <div class="box box-pricing box-pricing-primary">
@@ -327,22 +332,24 @@
                                 <div class="flex pr2 pl2 flex-grow-1">
                                     <div class="box box-pricing box-pricing-primary">
                                         <header class="box-header">
-                                            Qzzr Enterprise is now Boombox
+                                            Qzzr Enterprise
                                         </header>
                                         <div class="box-subheader">
-                                            Custom plans
+                                            Custom Plans
                                         </div>
+                                 
                                         <ul class="box-body">
                                             <li><strong class="b">All the goodness of Qzzr</strong></li>
-                                            <li>25,000-Unlimited engagements/month <span class="tooltip" data-tooltip="An engagement is a user starting a quiz, or voting on a poll."><i class="icon icon-ss-info"></i></span></li>
-                                            <li>White label</li>
-                                            <li>Unlimited interactive polls</li>
-                                            <li>Unlimited interactive lists (coming soon)</li>
-                                            <li>Supports team collaboration</li>
-                                            <li>Multiple brands</li>
-                                            <li>Ad refresh</li>
-                                            <li>Advanced customization</li>
+                                            <li><strong class="b">Plus the world's most engaging polls and lists</strong></li>
+                                            <li>Reduced branding or white label</li>
+                                            <li>Team collaboration tools</li>
+                                            <li>Support for multiple brands</li>
+                                            <li>Advanced customization options</li>
                                             <li>VIP support &amp; strategy consultations</li>
+                                            <li>+</li>
+                                            <li>Enterprise features for publishers (ad refresh, data exports, boost content, etc.)</li>
+                                            <li>Enterprise features for marketers (lead generation, click-throughs, integrations, etc.)</li>
+                                            <li>Enterprise features for employee insights (ability to track individual responses, etc.)</li>
                                         </ul>
                                         <footer class="box-footer">
                                             <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button-large h6 b">
