added line height to paragraphs.

--- a/brand-assets/index.html
+++ b/brand-assets/index.html
@@ -188,7 +188,7 @@
                                     <section>
                                       <div class="brand-guideline">
                                         <h3 class="h3 h b">Logo Guidelines</h3>
-                                        <p class="opacity-5 h5 brand-text-body mb5">Please use the Pollcaster logo in harmony with the examples below.</p>
+                                        <p class="opacity-5 h5 brand-text-body mb5 lhb">Please use the Pollcaster logo in harmony with the examples below.</p>
                                       </div>
                                     </section>
                                     <div class="brand-examples">
@@ -237,7 +237,7 @@
                                     <section>
                                       <div class="brand-guideline">
                                         <h3 class="h3 h b">Typography</h3>
-                                        <p class="opacity-5 h5 brand-text-body mb5">Words play an integral roll in creating rich content. We chose Colfax <br class="wl-none">for it’s near geometric temperment and refined impression.  Please <br class="wl-none">use the following sizes for best results.</p>
+                                        <p class="opacity-5 h5 brand-text-body mb5 lhb">Words play an integral roll in creating rich content. We chose Colfax <br class="wl-none">for it’s near geometric temperment and refined impression.  Please <br class="wl-none">use the following sizes for best results.</p>
                                         <h1 class="h1 lh1 mb4 accent-color">Heading is Colfax normal at 66px.</h1>
                                         <h3 class="h2 lh1 mb4 accent-color">Heading is Colfax normal at 48px.</h2>
                                         <h4 class="h3 lh1 mb4 ">Heading is Colfax normal at 36px.</h3>
@@ -250,7 +250,7 @@
                                     <section>
                                       <div class="brand-guideline">
                                         <h3 class="h3 h b">Qzzr</h3>
-                                        <p class="opacity-5 h5 brand-text-body mb5">Qzzr is one word. Only the first letter P is captalized. There is no letter U, I, or E.</p>
+                                        <p class="opacity-5 h5 brand-text-body mb5 lhb">Qzzr is one word. Only the first letter P is captalized. There is no letter U, I, or E.</p>
                                       </div>
                                     </section>
                                     <div class="brand-examples">
@@ -292,7 +292,7 @@
                                     <section>
                                         <div class="brand-guideline">
                                             <h3 class="h3 h b mb4">Brand Colors</h3>
-                                            <p class="opacity-5 h5 brand-text-body mb4">Colors add pizzazz and depth to just about everything. <br class="wl-none">Sample our pallete using the hex values or utilize our <br class="wl-none">brand’s swatches by downloading the ASE file.</p>
+                                            <p class="opacity-5 h5 brand-text-body mb4 lhb">Colors add pizzazz and depth to just about everything. <br class="wl-none">Sample our pallete using the hex values or utilize our <br class="wl-none">brand’s swatches by downloading the ASE file.</p>
                                         </div>
                                         <a style="max-width: 320px;" href="https://www.dropbox.com/s/d599ws78iwc82i5/colors.ase?dl=0" target="_blank" class="video button button-large button-primary mb2 get_start b h6">Colors.ASE</a>
                                     </section>
