added branding assets links to page footers

--- a/uses/generate-qualified-leads/index.html
+++ b/uses/generate-qualified-leads/index.html
@@ -283,6 +283,7 @@
                                 <li id="menu-item-409" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-409"><a href="/video-create-graded-quiz">How to create a graded quiz</a></li>
                                 <li id="menu-item-410" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-410"><a href="/make-quiz-like-buzzfeed">Create a quiz like BuzzFeed</a></li>
                                 <li id="menu-item-411" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-411"><a href="/images-qzzr">Images &#038; Qzzr</a></li>
+                                <li id="menu-item-411" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-411"><a href="brand-assets">Qzzr branding assets</a></li>
                             </ul>
                         </div>
                     </div>
