--- a/commonly-asked-questions/index.html
+++ b/commonly-asked-questions/index.html
@@ -238,6 +238,7 @@
 <li id="menu-item-409" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-409"><a href="/blog/video-create-graded-quiz">How to create a graded quiz</a></li>
 <li id="menu-item-410" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-410"><a href="/blog/make-quiz-like-buzzfeed">Create a quiz like BuzzFeed</a></li>
 <li id="menu-item-411" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-411"><a href="/blog/images-qzzr">Images &#038; Qzzr</a></li>
+<li id="menu-item-411" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-411"><a href="brand-assets">Qzzr branding assets</a></li>
 </ul></div></div><div id="nav_menu-6" class="widget widget_nav_menu box"><h3>Need help?</h3><div class="menu-need_help-container"><ul id="menu-need_help" class="menu"><li id="menu-item-412" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-412"><a href="http://go.qzzr.com/request-your-demo/">Request a demo</a></li>
 <li id="menu-item-413" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-413"><a href="http://go.qzzr.com/custom-quiz/">Custom quiz creation</a></li>
 <li id="menu-item-414" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-414"><a href="http://go.qzzr.com/campaign-management/">Campaign management</a></li>
