--- a/stories/marketers/index.html
+++ b/stories/marketers/index.html
@@ -597,6 +597,7 @@
                                 <li id="menu-item-409" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-409"><a href="/blog/video-create-graded-quiz">How to create a graded quiz</a></li>
                                 <li id="menu-item-410" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-410"><a href="/blog/make-quiz-like-buzzfeed">Create a quiz like BuzzFeed</a></li>
                                 <li id="menu-item-411" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-411"><a href="/blog/images-qzzr">Images &#038; Qzzr</a></li>
+                                <li id="menu-item-411" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-411"><a href="brand-assets">Qzzr branding assets</a></li>
                             </ul>
                         </div>
                     </div>
