Fixed broken link to the blog

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                         </div>
                         <hr class="rule">
                         <div>Check out our collection of quiz tips and strategies.</div>
-                        <a href="blog/" class="link link-purple b">View blog</a></div>
+                        <a href="http://blog.boombox.com/" class="link link-purple b">View blog</a></div>
                 </div>
             </div>
         </div>
